--- a/.github/workflows/virus-total-scan.yml
+++ b/.github/workflows/virus-total-scan.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: write
+
 jobs:
   virustotal:
     runs-on: ubuntu-latest
@@ -12,6 +15,7 @@ jobs:
         name: VirusTotal Scan
         uses: crazy-max/ghaction-virustotal@v4
         with:
+          update_release_body: true
           vt_api_key: ${{ secrets.VT_API_KEY }}
           files: |
             .zip$
