--- a/.github/workflows/virus-total-scan.yml
+++ b/.github/workflows/virus-total-scan.yml
@@ -18,5 +18,5 @@ jobs:
           update_release_body: true
           vt_api_key: ${{ secrets.VT_API_KEY }}
           files: |
-            .zip$
-            .tar.gz$
+            *.zip
+            *.tar.gz
